fixed small issue where navigation did not fit 100% in index2.php

--- a/css/index2.css
+++ b/css/index2.css
@@ -92,6 +92,7 @@ li , ul{
   display: none;
   margin-top: 1em;
   background-color: rgba(255,255,255,0.7);
+  margin-right: 0;
 }
 .shownav
 {
